20000417-15:27 GMT+3 Chen Kedem <niki@actcom.co.il>
   * source/lang/msghe862.c
   * source/lang/msghewin.c
     * update Hebrew language support to the new API
     ! PLEASE update source/lang/Makefile !

20000417-11:05 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *include/hbsetup.h
        *added automatic recognition of target platform for Watcom compiler
        Now HB_OS_DOS is correctly set for this compiler

    *include/hbdefs.h
        *added definition of HB_XREGS - this should be used to access
        a word size member of REGS union structure (Watcom uses different
        naming scheme) - for example:
        union REGS regs;
        regs.HB_XREGS.ax = 1;

    *source/rtl/filesys.c
        *fixed support for Watcom compiler

    *source/rtl/diskspac.c
    *source/rtl/inkey.c
    *source/rtl/isprint.c
    *source/rtl/net.c
    *source/rtl/gtdos/gtdos.c
    *source/rtl/gtdos/mousedos.c
        *changed to use HB_XREGS

    *source/rtl/gtapi.c
	*fixed printing using console output

    *source/rtl/gtcrs/gtcrs.c
	*altarnate characters set is disabled for xterm

20000417-06:32 GMT+1 Victor Szakats <info@szelvesz.hu>

   * source/vm/asort.c
     ! Some fixes to ASORT()

20000417-05:49 GMT+1 Victor Szakats <info@szelvesz.hu>

   * include/hbapi.h
   - source/rtl/asort.prg
   * source/rtl/Makefile
   + source/vm/asort.c
   * source/vm/Makefile
   * makefile.bc
   * makefile.vc
     + ASORT() rewritten using optimized C code, and using an optimized
       quicksort algorithm, the number of compares is even less than before.
     * ASORT() is now CA-Cl*pper compatible in handling the case when no
       codeblock is supplied, or the codeblock returns non logical value.
     ; Note that the function is new, so please test it as thoroughly as
       possible.
     ; Also thanks go to Jose Lalin.

   * include/hbapiitm.h
   * source/vm/itemapi.c
     + hb_itemSwap() function added.

   * source/lang/msges.c
     * Spanish language module updated.
